deployment/hls-cluster/test-hls-stream-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-hls-frontend
  namespace: video-proc-streaming
spec:
  hosts:
  - "live-playback.uob-tv.co.uk"
  gateways:
  - uob-tv-hls-playback-gateway
  http:
  - match:
    - uri:
        prefix: /test-stream
    rewrite:
      uri: /
    route:
    - destination:
        host: hls-cluster-service
        port:
          number: 8080
        subset: stream-test1234
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-hls-backend-destination
  namespace: video-proc-streaming
spec:
  host: hls-cluster-service
  subsets:
  - name: stream-test1234
    labels:
      stream-key: test1234
