deployment/hls-cluster/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hls-cluster-frontend-vs
  namespace: app-backends
spec:
  hosts:
  - "*"
  gateways:
  - uob-tv-api-gateway
  http:
